[project]
name = "mcp-playwright"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.9.3",
    "playwright==1.50.0",
]
[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
[project.optional-dependencies]
lint = ["pylint"]